--- a/metadata.yaml
+++ b/metadata.yaml
@@ -21,6 +21,8 @@ language: en
 publisher: Project Gutenberg
 rights: Public domain in the USA.
 rights_url: http://creativecommons.org/about/pdm
+subjects:
+- GITenberg
 title: 'Chap-books of the Eighteenth Century
 
   With Facsimiles, Notes, and Introduction'
